[front] added seperator between friend container on friend page [fix] lang dropdown meny being displayed behind friend list

--- a/src/nginx/html/style.css
+++ b/src/nginx/html/style.css
@@ -497,6 +497,10 @@ a {
 	color: var(--main-text-rgb);
 }
 
+.friendContainer:not(:first-child){
+	border-top: 1px solid var(--main-text-rgb);
+}
+
 .friendContainer a{
 	margin-left: 1vw;
 	flex: auto;
